--- a/src/sass/train.scss
+++ b/src/sass/train.scss
@@ -1,7 +1,45 @@
 .train-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding-top: 50px;
+  width: 100vw;
+  min-height: 100vh;
+
+  background: #1e1e1e;
+
+  .train-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 50px;
+    width: 100vw;
+    background: #1e1e1e;
+  }
+
+  .view_training_results {
+    .container-results {
+      padding: 20px;
+      background: #2c2c2c;
+      height: 70vh;
+      overflow-y: auto;
+      width: 20%;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(255, 255, 255, 0.15);
+
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
+  }
+
+  .container-charts {
+    position: fixed;
+    top: 30vh;
+    left: 30vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 70vw;
+    height: 70vh;
+  }
 }
