feat(train): Add learning rat

--- a/src/sass/var.scss
+++ b/src/sass/var.scss
@@ -1,5 +1,5 @@
 $color_white: #fff;
 $color_black: #333;
-$color_blue_container: #2a6ec2;
-$color_blue: #3d8ff5;
-$color_bleu_page: #5294e8;
+$color_blue_container: #2874a6;
+$color_blue: #2874a6;
+$color_bleu_page: #1f618d;
