feat(home): Add custom model & fix prettier

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,4 +1,4 @@
-@import "var";
-@import "home";
-@import "train";
-@import "neural";
+@import 'var';
+@import 'home';
+@import 'train';
+@import 'neural';
